--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -12,7 +12,7 @@
                     <div class="card">
                         <div class="card-body">
                             <!-- This is some text within a card block. -->
-                            
+                            <router-outlet></router-outlet>
                         </div>
                     </div>
                 </div>
